style.css
@import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@700&display=swap");

@font-face {
  font-family: "VCR OSD Mono";
  src: url("vcr_osd_mono.ttf");
}

:root {
    --green: #6fc38e;
    --green-bloom: #6fc38e88;
    --family: "VCR OSD Mono", sans-serif;
    --size: 25px;
}

* {
    pointer-events: none;
    user-select: none;
}

body {
    background-color: #050705;
    color: var(--green);
    font-family: var(--family);
    font-size: var(--size);
    overflow: hidden;
    margin: 0;
    text-shadow: 0px 0px 5px var(--green-bloom);
}

h1 {
    position: absolute;
    top: 10%;
    left: 50%;
    transform: translate(-50%, -50%);
    text-shadow: 0px 0px 15px var(--green-bloom);
    font-weight: normal;
}

#password {
    position: absolute;
    left: -50%;
    width: 200%;
    height: 100%;
    opacity: 0;
    pointer-events: initial;
    cursor: default;
}

#notification {
    position: absolute;
    top: 70%;
    left: 50%;
    transform: translate(-50%, -50%);
    font-size: 20px;
    opacity: 0;
    transition: .2s;
}

#visual {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    font-family: "Ubuntu";
}

.scan-lines::before {
    display: block;
    content: "";
    height: 100%;
    width: 100%;
    pointer-events: none;
    background: linear-gradient(#444 50%, #111 50%);
    background-size: 100% 4px;
    background-repeat: repeat-y;
    opacity: .14;
    box-shadow: inset 0px 0px 1px 1px rgba(0, 0, 0, 0.8);
}

.scan-lines>div {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 1.2rem;
    background: #000000;
    background: linear-gradient(to bottom, rgba(0, 255, 255, 0) 0%, var(--green) 50%, rgba(0, 0, 0, 0.98) 51%, rgba(0, 255, 255, 0) 100%);
    opacity: .04;
    animation: vline 6.25s linear infinite;
}

@keyframes vline {
    0% { top: 0 }
    to { top: 100% }
}

